@@ -18,7 +18,7 @@ import com.planet_ink.coffee_mud.Races.interfaces.*;
 import java.util.*;
 
 /*
-   Copyright 2003-2019 Bo Zimmerman
+   Copyright 2019-2019 Bo Zimmerman
 
    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
@@ -32,15 +32,15 @@ import java.util.*;
    See the License for the specific language governing permissions and
    limitations under the License.
 */
-public class Prayer_Corruption extends Prayer
+public class Prayer_Discipline extends Prayer
 {
 	@Override
 	public String ID()
 	{
-		return "Prayer_Corruption";
+		return "Prayer_Discipline";
 	}
 
-	private final static String localizedName = CMLib.lang().L("Corruption");
+	private final static String localizedName = CMLib.lang().L("Discipline");
 
 	@Override
 	public String name()
@@ -63,7 +63,7 @@ public class Prayer_Corruption extends Prayer
 	@Override
 	public long flags()
 	{
-		return Ability.FLAG_UNHOLY;
+		return Ability.FLAG_LAW;
 	}
 
 	@Override
@@ -80,18 +80,18 @@ public class Prayer_Corruption extends Prayer
 		CMMsg msg2=null;
 		if((mob!=target)&&(!mob.getGroupMembers(new HashSet<MOB>()).contains(target)))
 			msg2=CMClass.getMsg(mob,target,this,verbalCastCode(mob,target,auto)|CMMsg.MASK_MALICIOUS,L("<T-NAME> do(es) not seem to like <S-NAME> messing with <T-HIS-HER> head."));
-		if(success&&(CMLib.factions().getFaction(CMLib.factions().getAlignmentID())!=null))
+		if(success&&(CMLib.factions().getFaction(CMLib.factions().getInclinationID())!=null))
 		{
-			final CMMsg msg=CMClass.getMsg(mob,target,this,verbalCastCode(mob,target,auto),L(auto?"<T-NAME> feel(s) more evil.":"^S<S-NAME> "+prayWord(mob)+" to corrupt <T-NAMESELF>!^?"));
+			final CMMsg msg=CMClass.getMsg(mob,target,this,verbalCastCode(mob,target,auto),L(auto?"<T-NAME> feel(s) more lawful.":"^S<S-NAME> "+prayWord(mob)+" to discipline <T-YOUPOSS> mind!^?"));
 			if((mob.location().okMessage(mob,msg))
 			&&((msg2==null)||(mob.location().okMessage(mob,msg2))))
 			{
 				mob.location().send(mob,msg);
 				if((msg.value()<=0)&&((msg2==null)||(msg2.value()<=0)))
 				{
-					target.tell(L("Evil, vile thoughts fill your head."));
-					final int evilness=CMLib.dice().roll(10,adjustedLevel(mob,asLevel),10*super.getXLEVELLevel(mob))*-1;
-					CMLib.factions().postFactionChange(target,this, CMLib.factions().getAlignmentID(), evilness);
+					target.tell(L("Orderly, lawful thoughts fill your head."));
+					final int lawfulness=CMLib.dice().roll(10,adjustedLevel(mob,asLevel),10*super.getXLEVELLevel(mob));
+					CMLib.factions().postFactionChange(target,this, CMLib.factions().getInclinationID(), lawfulness);
 				}
 				if(msg2!=null)
 					mob.location().send(mob,msg2);
