@@ -683,6 +683,12 @@ Example  : pray "devourer curse" orc\n\r\
 The caster causes the target to have the face of a devourer demon, reducing their \
 charisma to almost nothing as they become a target of loathing and hatred.
 
+PRAYER_DISCIPLINE=<ABILITY>\
+Usage    : PRAY "DISCIPLINE" [TARGET NAME] \n\r\
+Example  : pray "discipline" orc\n\r\
+This prayer builds discipline into the target's mind and slides \
+them ever closer to the point of being more lawful. 
+
 PRAYER_DISPELCHAOS=PRAYER_DISPEL_CHAOS
 PRAYER_DISPEL_CHAOS=<ABILITY>\
 Usage    : PRAY "DISPEL CHAOS" [TARGET NAME]\n\r\
@@ -1719,6 +1725,13 @@ Usage    : PRAY "REMOVE DEATH MARK" [TARGET NAME]\n\r\
 Example  : pray "remove death mark" bob\n\r\
 Removes any thief/assassin marks, as well as making those involves in a \
 burglars contract hit forget their job.
+
+REMOVE_INHIBITIONS=PRAYER_REMOVEINHIBITIONS
+PRAYER_REMOVEINHIBITIONS=<ABILITY>\
+Usage    : PRAY "REMOVE INHIBITIONS" [TARGET NAME] \n\r\
+Example  : pray "remove inhibitions" orc\n\r\
+This prayer removes inhibitions from the target's mind and slides \
+them ever closer to the chaos. 
 
 REMOVE_PARALYSIS=PRAYER_REMOVEPARALYSIS
 PRAYER_REMOVE_PARALYSIS=PRAYER_REMOVEPARALYSIS
